@@ -95,7 +95,11 @@ Changes for v2.02
 - Skip blank lines when looping through Functions table of device editor (Graham)
 - When creating new key move with Function selected, correct bug that made default selection not be recognised (Graham)
 - Make RM windowClosing() be failsafe by adding a "finally dispose()"; already done for RMIR by Barf (Graham)
-- First steps towards handling JP1.4 and JP2 remotes (Graham)
+- Add support for JP1.4 and JP2 remotes to existing facilities of RMIR (Graham)
+- Add support for JP1.4 Activities (Graham)
+- When RM is opened from RMIR, open it as a new application rather than as a window within RM, to prevent protocol crosstalk issues caused by RMIR and RM sharing same instance of ProtocolManager (Graham)
+- When an upgrade containing a Manual Protocol is deleted and that protocol is not used elsewhere, delete it also from ProtocolManager (Graham)
+- When adding a device upgrade, require the setup code not to clash with an existing upgrade (Graham)
 
 Changes for v2.01
 -- Alpha --
